<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/red_very_bland_FDE2E6"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/add_new_student_s"
        android:textColor="@color/red_bland_E37F77"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/edtStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_student_s"
        android:autofillHints="@string/name_student_s" />

    <EditText
        android:id="@+id/edtStudentGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/grade_student_s"
        android:autofillHints="@string/grade_student_s" />

    <Spinner
        android:layout_marginTop="@dimen/_8dp"
        android:id="@+id/spinnerSchoolChosen"
        style="@style/spinnerDropDownItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:background="@drawable/bg_btn_add_school_student"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:background="@drawable/bg_btn_add_school_student"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>