<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SchoolManagementFragment">

        <LinearLayout
            android:id="@+id/layoutAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_light_a6d7fe"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgStudent"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/img_student"
                    app:srcCompat="@drawable/ic_student" />

                <TextView
                    android:id="@+id/tvStudentNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/number_demo_300"
                    android:textColor="@color/red_e57f82"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:background="@drawable/bg_btn_add_school_student"
                    android:paddingStart="@dimen/_20dp"
                    android:paddingTop="@dimen/_4dp"
                    android:paddingEnd="@dimen/_20dp"
                    android:paddingBottom="@dimen/_4dp"
                    android:text="@string/add_student_s"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgSchool"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/img_university"
                    app:srcCompat="@drawable/ic_school" />

                <TextView
                    android:id="@+id/tvSchoolNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/number_demo_300"
                    android:textColor="@color/red_e57f82"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:background="@drawable/bg_btn_add_school_student"
                    android:paddingStart="@dimen/_20dp"
                    android:paddingTop="@dimen/_4dp"
                    android:paddingEnd="@dimen/_20dp"
                    android:paddingBottom="@dimen/_4dp"
                    android:text="@string/add_school_s"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListSchoolAndStudent"
            android:paddingTop="@dimen/_8dp"
            android:paddingBottom="@dimen/_8dp"
            android:paddingStart="@dimen/_4dp"
            android:paddingEnd="@dimen/_4dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAdd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
